--- a/assets/css/src/thumbnails.scss
+++ b/assets/css/src/thumbnails.scss
@@ -20,12 +20,5 @@ article:nth-child(odd) .alternate {
   margin-left: 10px;
 }
 
-@media only screen and (max-width: 800px) {
-  .alternate {
-    float: none !important;
-    width: 120%;
-    max-width: 120%;
-    margin: auto -10%;
-    margin-bottom: 12px;
-  }
-}
+// Mobile specific thumbnail code moved to af-layout-responsive.
+
